--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,27 @@
 version: '3.8'
 
 services:
-  mysqldb:
-    image: mysql:8.0.31
-    restart: unless-stopped
-    env_file: ./.env
-    environment:
-      - MYSQL_ROOT_PASSWORD=$DB_PASSWORD
-      - MYSQL_DATABASE=$DB_DATABASE
-    expose:
-      - $DB_PORT
-    volumes:
-      - db:/var/lib/mysql
+  # mysqldb:
+  #   image: mysql:8.0.31
+  #   restart: unless-stopped
+  #   env_file: ./.env
+  #   environment:
+  #     - MYSQL_ROOT_PASSWORD=$DB_PASSWORD
+  #     - MYSQL_DATABASE=$DB_DATABASE
+  #   expose:
+  #     - $DB_PORT
+  #   volumes:
+  #     - db:/var/lib/mysql
   app:
-    depends_on:
-      - mysqldb
+    # depends_on:
+    #   - mysqldb
     build: 
       context: .
       dockerfile: Dockerfile
+    network_mode: "host"  
     env_file: ./.env
-    environment:
-      - DB_HOST=mysqldb
+    # environment:
+      # - DB_HOST=mysqldb
       # - DB_TYPE=mysql
       # - DB_USERNAME=$DB_USERNAME
       # - DB_PASSWORD=$DB_PASSWORD
@@ -33,7 +34,8 @@ services:
       # - SERVER_PORT=$SERVER_PORT
       # - PUBLIC_IMAGES =$PUBLIC_IMAGES
     ports:
-      - 3001:$SERVER_PORT
+      - 127.0.0.1:3001:$SERVER_PORT
+      - 6092:6092
     stdin_open: true
     tty: true
     
